--- a/app/src/main/res/layout/activity_demande_details.xml
+++ b/app/src/main/res/layout/activity_demande_details.xml
@@ -45,7 +45,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="28sp"
-            android:text="Company 1"
             android:layout_marginHorizontal="35dp"
             android:layout_marginBottom="40dp"
             android:textColor="@color/black"
@@ -58,7 +57,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Etat de traitement"
             android:layout_marginHorizontal="50dp"
             android:layout_marginBottom="10dp"
             android:layout_gravity="end"
@@ -96,9 +94,8 @@
             android:id="@+id/type_identite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Passeport"
             android:textSize="18sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -124,9 +121,8 @@
             android:id="@+id/num_identite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="123456789"
             android:textSize="18sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -164,9 +160,8 @@
             android:id="@+id/nom_entreprise"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Company 1"
             android:textSize="18sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -192,9 +187,8 @@
             android:id="@+id/adresse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Somewhere"
             android:textSize="18sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -207,7 +201,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Type d’activités"
+            android:text="Type d'activité"
             android:textSize="20sp"
             android:layout_marginHorizontal="42dp"
             android:layout_marginBottom="5dp"
@@ -220,9 +214,8 @@
             android:id="@+id/activite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cosmetiques"
             android:textSize="18sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -235,7 +228,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="N° d’identification fiscale"
+            android:text="N° d'identification fiscale"
             android:textSize="20sp"
             android:layout_marginHorizontal="42dp"
             android:layout_marginBottom="5dp"
@@ -248,9 +241,8 @@
             android:id="@+id/num_fiscale"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="123456789"
             android:textSize="18sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -276,9 +268,8 @@
             android:id="@+id/rib"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="123456789"
             android:textSize="18sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -293,7 +284,7 @@
             android:layout_height="wrap_content"
             android:text="Fichiers soumis"
             android:textSize="26sp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
@@ -315,9 +306,9 @@
             android:id="@+id/idntFile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Passeport.pdf"
+            android:text="Pèce d’identité.pdf"
             android:textSize="18sp"
-            android:layout_marginHorizontal="40dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
             android:textColor="@color/black"
@@ -377,7 +368,7 @@
             android:id="@+id/fiscaleFile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Fiscale.pdf"
+            android:text="Carte Fiscale.pdf"
             android:textSize="18sp"
             android:layout_marginHorizontal="40dp"
             android:layout_marginTop="5dp"
@@ -408,7 +399,7 @@
             android:id="@+id/ribFile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rib.pdf"
+            android:text="Chèque barré.pdf"
             android:textSize="18sp"
             android:layout_marginHorizontal="40dp"
             android:layout_marginTop="5dp"
