--- a/app/src/main/res/drawable/input_background.xml
+++ b/app/src/main/res/drawable/input_background.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#b2ffffff" />
-    <corners android:radius="20dp"/>
-    <stroke android:width="2dp" android:color="#F8B042" />
+    <corners android:radius="18dp"/>
+    <stroke android:width="1dp" android:color="#222" />
 </shape>
