--- a/app/src/main/res/layout/list_item_demande.xml
+++ b/app/src/main/res/layout/list_item_demande.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="En cours de traitement"
-        android:textColor="@color/en_cours"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:layout_gravity="end"
         android:fontFamily="@font/aleo"
