--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -51,10 +51,8 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="15dp"
                 android:fontFamily="@font/aleo"
-                android:inputType="number"
                 android:textColorHint="#666"
-                android:textStyle="bold"
-                android:maxLength="9"/>
+                android:textStyle="bold"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,10 +71,9 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="15dp"
                 android:fontFamily="@font/aleo"
-                android:inputType="number"
                 android:textColorHint="#666"
                 android:textStyle="bold"
-                android:maxLength="9"/>
+                android:inputType="textCapSentences"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,10 +92,9 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="15dp"
                 android:fontFamily="@font/aleo"
-                android:inputType="number"
                 android:textColorHint="#666"
                 android:textStyle="bold"
-                android:maxLength="9"/>
+                android:inputType="textCapSentences"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -117,10 +113,9 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="15dp"
                 android:fontFamily="@font/aleo"
-                android:inputType="number"
                 android:textColorHint="#666"
                 android:textStyle="bold"
-                android:maxLength="9"/>
+                android:maxLength="13"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -139,7 +134,7 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="15dp"
                 android:fontFamily="@font/aleo"
-                android:inputType="number"
+                android:inputType="textPassword"
                 android:textColorHint="#666"
                 android:textStyle="bold"
                 android:maxLength="9"/>
@@ -161,7 +156,7 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="15dp"
                 android:fontFamily="@font/aleo"
-                android:inputType="number"
+                android:inputType="textPassword"
                 android:textColorHint="#666"
                 android:textStyle="bold"
                 android:maxLength="9"/>
