--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#333333</color>
     <color name="white">#D9D9D9</color>
     <color name="primary">#EC6A52</color>
-    <color name="primary_app">#F3B7AD</color>
+    <color name="primary_app">#F5B79A</color>
     <color name="orange_secondary">#C2622B</color>
     <color name="yellow_back">#3ffba500</color>
 </resources>
