--- a/app/src/main/res/layout/activity_demande.xml
+++ b/app/src/main/res/layout/activity_demande.xml
@@ -302,6 +302,7 @@
     />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/submitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Soumettre"
@@ -314,7 +315,6 @@
         android:textColor="#fff"
         android:fontFamily="@font/aleo"
         android:layout_gravity="center"
-        android:onClick="soumettreDemande"
         android:textAllCaps="false"
         android:textStyle="bold"
     />
