--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -50,43 +50,43 @@
             android:textStyle="bold"
             />
 
-        <com.example.miniprojet.activities.ExpandableTextView
+        <com.example.miniprojet.customAdapters.ExpandableTextView
             android:id="@+id/expandableTextView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <com.example.miniprojet.activities.ExpandableTextView
+        <com.example.miniprojet.customAdapters.ExpandableTextView
             android:id="@+id/expandableTextView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <com.example.miniprojet.activities.ExpandableTextView
+        <com.example.miniprojet.customAdapters.ExpandableTextView
             android:id="@+id/expandableTextView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <com.example.miniprojet.activities.ExpandableTextView
+        <com.example.miniprojet.customAdapters.ExpandableTextView
             android:id="@+id/expandableTextView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <com.example.miniprojet.activities.ExpandableTextView
+        <com.example.miniprojet.customAdapters.ExpandableTextView
             android:id="@+id/expandableTextView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <com.example.miniprojet.activities.ExpandableTextView
+        <com.example.miniprojet.customAdapters.ExpandableTextView
             android:id="@+id/expandableTextView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <com.example.miniprojet.activities.ExpandableTextView
+        <com.example.miniprojet.customAdapters.ExpandableTextView
             android:id="@+id/expandableTextView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
